# SDiZO_Projekt1

SDiZO_KasperRadom/: CMakeLists.txt
SDiZO_KasperRadom/main/: Czas.cpp  ElementListy.cpp  ElementListy.h  KopiecBinarny.cpp  KopiecBinarny.h  Lista.cpp  Lista.h  Tablica.cpp  Tablica.h  Test.cpp  Test.h  TestAutomatyczny.cpp  TestAutomatyczny.h  main.cpp
